Training on XGBoost Completed

--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 56,
    "id": "e72006fd",
    "metadata": {},
    "outputs": [
@@ -28,9 +28,10 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score,confusion_matrix,classification_report\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_val_score,RandomizedSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.decomposition import PCA\n",
+    "from xgboost import XGBClassifier\n",
     "\n",
     "x_train=pd.read_csv(\"../data/processed/train.csv\",delimiter=\",\").drop(columns=\"PassengerId\")\n",
     "y_train=pd.read_csv(\"../data/processed/train_output.csv\",delimiter=\",\")\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 57,
    "id": "525547c7",
    "metadata": {},
    "outputs": [
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 58,
    "id": "d8c3c861",
    "metadata": {},
    "outputs": [
@@ -156,6 +157,69 @@
     "\n",
     "print(\"CV Accuracy Mean:\", scores.mean())\n",
     "print(\"CV Accuracy Std:\", scores.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "80eca415",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost Accuracy: 0.8379888268156425\n",
+      "Confusion Matrix: [[90 15]\n",
+      " [14 60]]\n",
+      "Classification Report:               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.87      0.86      0.86       105\n",
+      "           1       0.80      0.81      0.81        74\n",
+      "\n",
+      "    accuracy                           0.84       179\n",
+      "   macro avg       0.83      0.83      0.83       179\n",
+      "weighted avg       0.84      0.84      0.84       179\n",
+      "\n",
+      "cv mean: 0.8202403230572244\n",
+      "cv std: 0.021935542434765233\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Training on XGBoost\n",
+    "xgboost_model=Pipeline([\n",
+    "    (\"pre\",preprocessing),\n",
+    "    (\"clf\",XGBClassifier(random_state=42,n_estimators=200,max_depth=4,learning_rate=0.1\n",
+    "                         ,subsample=0.8,colsample_bytree=0.8))\n",
+    "])\n",
+    "\n",
+    "\n",
+    "# param_dist = {\n",
+    "#     \"clf__n_estimators\": [200, 400, 600, 800],\n",
+    "#     \"clf__max_depth\": [3, 4, 5],\n",
+    "#     \"clf__learning_rate\": [0.01, 0.03, 0.05, 0.1],\n",
+    "#     \"clf__subsample\": [0.8, 1.0],\n",
+    "#     \"clf__colsample_bytree\": [0.8, 1.0],\n",
+    "#     \"clf__reg_alpha\": [0, 0.1, 0.5],\n",
+    "#     \"clf__reg_lambda\": [1, 2, 5]\n",
+    "# }\n",
+    "# randomized_search=RandomizedSearchCV(estimator=xgboost_model,\n",
+    "#                                      param_distributions=param_dist,n_iter=20,cv=5,verbose=1,n_jobs=-1,scoring=\"accuracy\")\n",
+    "\n",
+    "xgboost_model.fit(x_train,y_train)\n",
+    "\n",
+    "xgboost_prediction=xgboost_model.predict(cv_train)\n",
+    "\n",
+    "print(\"XGBoost Accuracy:\",accuracy_score(cv_train_output,xgboost_prediction))\n",
+    "print(\"Confusion Matrix:\",confusion_matrix(cv_train_output,xgboost_prediction))\n",
+    "print(\"Classification Report:\",classification_report(cv_train_output,xgboost_prediction))\n",
+    "\n",
+    "scores=cross_val_score(xgboost_model,x_train,y_train.to_numpy().ravel(),cv=5,scoring=\"accuracy\")\n",
+    "print(\"cv mean:\",scores.mean())\n",
+    "print(\"cv std:\",scores.std())\n",
+    "# print(randomized_search.best_params_)\n",
+    "# print(randomized_search.best_score_)"
    ]
   }
  ],
