Models Saving Completed

--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "e72006fd",
    "metadata": {},
    "outputs": [
@@ -32,6 +32,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.decomposition import PCA\n",
     "from xgboost import XGBClassifier\n",
+    "import joblib\n",
     "\n",
     "x_train=pd.read_csv(\"../data/processed/train.csv\",delimiter=\",\").drop(columns=\"PassengerId\")\n",
     "y_train=pd.read_csv(\"../data/processed/train_output.csv\",delimiter=\",\")\n",
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "525547c7",
    "metadata": {},
    "outputs": [
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "d8c3c861",
    "metadata": {},
    "outputs": [
@@ -156,12 +157,12 @@
     "scores = cross_val_score(Random_forest_model, x_train, y_train.to_numpy().ravel(), cv=5, scoring=\"accuracy\")\n",
     "\n",
     "print(\"CV Accuracy Mean:\", scores.mean())\n",
-    "print(\"CV Accuracy Std:\", scores.std())"
+    "print(\"CV Accuracy Std:\", scores.std())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "80eca415",
    "metadata": {},
    "outputs": [
@@ -184,6 +185,16 @@
       "cv mean: 0.8202403230572244\n",
       "cv std: 0.021935542434765233\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['../models/xgboost_model.pkl']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -219,7 +230,12 @@
     "print(\"cv mean:\",scores.mean())\n",
     "print(\"cv std:\",scores.std())\n",
     "# print(randomized_search.best_params_)\n",
-    "# print(randomized_search.best_score_)"
+    "# print(randomized_search.best_score_)\n",
+    "\n",
+    "\n",
+    "joblib.dump(model, '../models/logistic_regression_model.pkl')\n",
+    "joblib.dump(Random_forest_model, '../models/random_forest_model.pkl')\n",
+    "joblib.dump(xgboost_model, '../models/xgboost_model.pkl')"
    ]
   }
  ],
